modules/network/vpc.tf
resource "aws_vpc" "eks_lab01_vpc" {
  cidr_block = var.cidr_block

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = merge(var.tags,
    { Name = "${var.project_name}-vpc" }
  )
}
